--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,20 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>2.7.0</version>
         </dependency>
+
+        <!-- Hibernate Validator implementation -->
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.0.10.Final</version>
+        </dependency>
+        <!-- Validation API -->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
+
     </dependencies>
 
     <build>
