--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,13 @@
             <version>2.0.1.Final</version>
         </dependency>
 
+        <!--spring-aspects-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>5.3.20</version>
+        </dependency>
+
     </dependencies>
 
     <build>
